# Wood_made_from_stick

./: .gitignore  CMakeLists.txt  README.md  main.cpp
